block 'dropdown' css fix: set text-align: left by default

--- a/common.blocks/dropdown/dropdown.css
+++ b/common.blocks/dropdown/dropdown.css
@@ -2,6 +2,7 @@
 {
     position: relative;
     display: inline-block;
+    text-align: left;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
